// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin - Tickets - Attachment Detail Card Should display details about a ticket 1`] = `
<pf-attachment-detail-card
  deleteRequest="null"
  deletingAttachmentModalOpen$={[Function Store]}
  store={[Function Store]}
  ticketAttachments={[Function Array]}
  ticketId={[Function Number]}
  unsubscribe$={[Function Subject]}
>
  
</pf-attachment-detail-card>
`;

exports[`Admin - Tickets - Attachment Detail Card should dispatch a model open action on a delete request 1`] = `
<pf-attachment-detail-card
  deleteRequest={[Function Object]}
  deletingAttachmentModalOpen$={[Function Store]}
  store={[Function Store]}
  ticketAttachments={[Function Array]}
  ticketId={[Function Number]}
  unsubscribe$={[Function Subject]}
>
  
</pf-attachment-detail-card>
`;
